# cargo-wash

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  cliff.toml  deny.toml  typos.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
scripts/: release_version.ps1  release_version.sh
src/: args.rs  data.rs  extensions.rs  logic.rs  main.rs  test.rs  utility.rs  utils.rs
src/args/: commands.rs  mod.rs  opts.rs
src/cli/: commands.rs  mod.rs  opts.rs
src/commands/: clean.rs  execute.rs  executor.rs  mod.rs  stats.rs
tests/snapshots/: cargo_wash__test__cargo_wash-bench.snap  cargo_wash__test__cargo_wash-build.snap  cargo_wash__test__cargo_wash-check.snap  cargo_wash__test__cargo_wash-clean.snap  cargo_wash__test__cargo_wash-doc.snap  cargo_wash__test__cargo_wash-execute.snap  cargo_wash__test__cargo_wash-rebuild.snap  cargo_wash__test__cargo_wash-run.snap  cargo_wash__test__cargo_wash-size.snap  cargo_wash__test__cargo_wash-stats.snap  cargo_wash__test__cargo_wash-test.snap  cargo_wash__test__cargo_wash-update.snap  cargo_wash__test__cargo_wash.snap
