[package]
name = "cargo-wash"
description = "A tool to clean up your Cargo caches"
repository = "https://github.com/bircni/cargo-wash"
version = "1.2.2"
authors = ["bircni"]
edition = "2024"
license = "MIT"
readme = "README.md"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo", "wash", "cache", "plugin", "cli"]

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
log = "0.4"
parking_lot = "0.12.3"
rayon = "1"
simplelog = "0.12"
strum_macros = "0.27"

[dev-dependencies]
insta = { version = "1.42", features = ["json"] }


[[bin]]
name = "cargo-wash"
path = "src/main.rs"

[lints.rust]
unsafe_code = "deny"
deprecated = "warn"
elided_lifetimes_in_paths = "warn"
rust_2021_prelude_collisions = "warn"
semicolon_in_expressions_from_macros = "warn"
trivial_numeric_casts = "warn"
unsafe_op_in_unsafe_fn = "warn"                         # `unsafe_op_in_unsafe_fn` may become the default in future Rust versions: https://github.com/rust-lang/rust/issues/71668
unused_extern_crates = "warn"
unused_import_braces = "warn"
unused_lifetimes = "warn"

[lints.rustdoc]
all = "warn"
missing_crate_level_docs = "warn"

[lints.clippy]
all = "warn"
correctness = "warn"
suspicious = "warn"
style = "warn"
complexity = "warn"
perf = "warn"
pedantic = "warn"
nursery = "warn"

# Additional lints from https://rust-lang.github.io/rust-clippy/master/index.html?groups=restriction
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
assertions_on_result_states = "warn"
create_dir = "warn"
clone_on_ref_ptr = "warn"
expect_used = "warn"
missing_assert_message = "warn"
panic_in_result_fn = "warn"
str_to_string = "warn"
todo = "warn"
unwrap_used = "warn"
unimplemented = "warn"
wildcard_enum_match_arm = "warn"
